# rust_coupang_ptn_api1

./: .gitignore  Cargo.toml
json/: side_mobile.json  side_mobile_multi_reco.json  text_ads.json  text_ads_reco.json  text_ads_related.json
src/: main.rs
