[package]
name = "coupang_ptn_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
hex = "0.4"
hmac = "0.12"
html-escape = "0.2"
percent-encoding = "2.3"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
regex = "1"